<resources>
    <string name="app_name">zrobseliste</string>
    <string name="select">Wybierz listę</string>
    <string name="informations_and_preferences">Informacje i Preferencje</string>
    <string name="about_creators">Autorzy aplikacji</string>
    <string name="about_text">Czwórka młodych adeptów informatyki uczęszczających na Uniwersytet Mikołaja Kopernika</string>
    <string name="registration">UTWÓRZ KONTO</string>
    <string name="delete_task">usuń zadanie</string>
    <string name="accept">Potwierdź</string>
    <string name="do_you_really_wanna_delete_this_task">Czy na pewno chcesz usunąć to zadanie?</string>
    <string name="decline">odrzuć</string>
    <string name="tasks">zadania</string>
    <string name="main">główny</string>
    <string name="groups">grupy</string>
    <string name="menu">menu</string>
    <string name="settings">ustawienia</string>
    <string name="logout">wyloguj</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="do_you_really_wanna_delete_all_selected_tasks">Czy na pewno chcesz usunąć wszystkie zaznaczone zadania?</string>
    <string name="login">LOGOWANIE</string>
    <string name="password">hasło</string>
    <string name="log_in">ZALOGUJ</string>
    <string name="do_you_forget_password">Zapomniałeś haśła?</string>
    <string name="dont_have_account">Nie posiadasz konta? Zarejestruj się</string>
    <string name="username">nazwa użytkownika</string>
    <string name="repeat_password">powtórz hasło</string>
    <string name="register">ZAREJESTRUJ</string>
    <string name="already_have_account">Posiadasz już konto? Kliknij tutaj</string>
    <string name="add_group">Dodaj grupę</string>
    <string name="manage">zarządzaj</string>
    <string name="leave_group">opuść grupę</string>
    <string name="group_name">nazwa grupy</string>
    <string name="new_task">Nowe zadanie</string>
    <string name="cancel">Odrzuć</string>
    <string name="add">Dodaj</string>
    <string name="enter_group_name">Podaj nazwę grupy</string>
    <string name="list">Listy</string>
    <string name="language">Wybór języka</string>
    <string name="polish">Polski</string>
    <string name="english">Angielski</string>
    <string name="delete_account">usuń konto</string>
    <string name="delete_account_text">Czy na pewno chcesz usunąć konto?</string>
    <string name="your_tasks">Twoje zadania</string>
    <string name="assign">przypisz</string>
    <string name="list_name">nazwa listy</string>
    <string name="enter_list_name">Podaj nazwę listy</string>
    <string name="do_you_want_delete_list">Czy chcesz usunąć wybraną listę?</string>
    <string name="do_you_want_leave_group">Czy chcesz opuścić grupę?</string>
    <string name="sprawdzanie_hasel">Podane haśła różnią się</string>
    <string name="do_you_want_delete_group">Czy chcesz usunąć grupę?</string>
    <string name="registration_successful">rejestracja pomyślna</string>
    <string name="mail_already_existed">podany mail już istnieje</string>
    <string name="wrong_data">podano niewłaściwe dane</string>
    <string name="registration_failed">nie udało się zarejestrować</string>
    <string name="login_successful">logowanie pomyśłne</string>
    <string name="login_failed">nieprawidłowe dane</string>
    <string name="remember_me">nie wylogowuj mnie</string>
    <string name="session_time">sesja wygasła</string>
    <string name="delete_account_info">konto zostało usunięte</string>
    <string name="delete_account_info_failed">wystąpił błąd przy usuwaniu konta</string>
    <string name="creating_group_failed">nazwa grupy nie może być pusta</string>
    <string name="invalid_email">niepoprawny email</string>
    <string name="delete_user_failed">nie mozna usunąć właściciela</string>
    <string name="delete_group_failed">tylko właściciel może usunąć grupe</string>
    <string name="owner_leave_group_failed">wlaściciel nie może opuścić grupy</string>
    <string name="invalid_list_name">niewłaściwa nazwa listy</string>
    <string name="empty_list">nie można dodać zadania bez listy</string>
    <string name="loading_data">nie udało się wczytac danych, przełącz ekrany</string>
    <string name="wrong_user">nie znaleziono uzytkownika</string>
    <string name="cannot_delete_list">nie można usunać listy</string>
    <string name="cannot_add_list_without_group">nie można dodać listy bez grupy</string>
    <string name="cannot_delete_task">nie można usunąć zadania, odśwież listę</string>
    <string name="cannot_update_task">nie można edytować zadania, odśwież listę</string>
    <string name="cannot_leave_group">nie można opuścić grupy, odśwież listę</string>
    <string name="cannot_delete_list_refresh">nie mozna usunąć listy, odśwież ekran</string>
    <string name="delete">usuń</string>
</resources>